--- a/app/admin/template/sales/invoice/modal.transfer.twig
+++ b/app/admin/template/sales/invoice/modal.transfer.twig
@@ -4,16 +4,14 @@
 
 {% block body %}
 	<form class="form-horizontal" action="/sales/invoice?action=edit&id={{ invoice.id }}" method="post">
-		<div class="form-group">
-			<label class="control-label col-md-3">{% trans "Amount" %}</label>
-			<div class="col-md-9">
-				<input type="text" placeholder="{% trans "Amount" %}" name="transfer[amount]" value="{{ transfer.amount }}" class="form-control">
-			</div>
+		<div class="mb-3">
+			<label class="form-label">{% trans "Amount" %}</label>
+			<input type="text" placeholder="{% trans "Amount" %}" name="transfer[amount]" value="{{ transfer.amount }}" class="form-control">
 		</div>
 	</form>
 {% endblock body %}
 
 {% block footer %}
+	<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{% trans "Cancel" %}
 	<button type="submit" class="btn btn-primary" onclick="$(this).closest('.modal-content').find('form').submit();">{% trans "Save" %} </button>
-	<button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Cancel" %}
 {% endblock footer %}
