--- a/app/admin/media/css/style.css
+++ b/app/admin/media/css/style.css
@@ -1,236 +1,114 @@
+html {
+  height: -webkit-fill-available;
+}
+
 body {
-	font-size: 12px;
-	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: 400;
-	font-size: 1.4em;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  overflow-y: scroll;
+  font-size: 0.90em;
+  font-weight: 400;
 }
 
-.dropdown-menu {
-	font-size: 13px
+main.col {
+  display: flex;
+  flex-wrap: nowrap;
+  min-height: 100vh;
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding: 30px;
+  background-color: #f5f7fb;
 }
 
-.no-margin {
-	margin: 0 !important;
-}
-
-.no-padding {
-	padding: 0 !important;
-}
-
-#login {
+main.col > .container-fluid {
 	background-color: #fff;
-	color: #fff
-}
-	#login .login-box-msg {
-		margin: 0;
-		text-align: center;
-		padding: 0 20px 20px 20px;
-	}
-
-	#login-wrapper {
-		max-width: 460px;
-		margin: 0 auto;
-		margin-top: 40px
-	}
-
-	#login-content {
-		color: #222;
-		padding: 42px 48px;
-		background: #fff;
-		border-radius: 3px;
-		margin-top: 15px
-	}
-	#login-content img {
-		margin-bottom: 20px;
-	}
-
-.form-condensed .form-group {
-    margin-top: 0;
-    margin-bottom: 5px;
-}
-
-.panel-body .actions {
-	position: absolute;
-	right: 25px;
-	top: 10px
-}
-
-.customer_contact .panel-body {
-	min-height: 190px;
-}
-
-.customer_contact address {
-	margin-left: 30px;
-}
-
-/**
- * Pagination
- */
-
-.pagination .jump-to-page {
-    padding: 4px;
-}
-
-	.pagination .jump-to-page input {
-	    border: solid 1px #eee;
-	    text-align: center;
-	}
-
-/**
- * Dropzone
- */
-.dropzone, .dropzone-wrapper {
-	position: relative;
-	background: #fcfcfc;
-	border: dashed 1px #ddd;
-	padding: 20px;
-	cursor: pointer
-}
-
-	.dropzone .dz-message, .dropzone-wrapper .dz-message {
-		width: 190px;
-		opacity: .5;
-		margin: 0 auto;
-		text-align: center
-	}
-
-		.dropzone .dz-message span, .dropzone-wrapper .dz-message span {
-			display: block;
-		}
-
-		.dropzone .progress, .dropzone-wrapper .progress {
-			position: absolute;
-			left: 20px;
-			bottom: 0;
-			height: 15px;
-			display: none;
-			width: 180px;
-			left: 50%;
-			margin-left: -90px
-		}
-
-.dz-preview {
-	display: none
-}
-
-/**
- * Forms
- */
-.form-inline .form-group {
-	margin-left: 0;
- 	margin-right: 0
-}
-
-.help-block {
-	font-size: 90%;
-	font-style: italic
-}
-
- /**
-  * Tabs
-  */
-.tab-content {
 	padding: 30px;
-    border: solid 1px #ddd;
-    border-top: 0;
+}
+
+a {
+	text-decoration: none;
+}
+a:not(.btn):hover {
+/*	text-decoration: underline;*/
 }
 
 /**
- * Document/edit
+ * Sidebar
  */
-#added_tags .label {
-	font-size: 1em;
+#sidebar {
+  min-height: 100vh;
 }
 
-
-.drag-handle {
-	cursor: pointer;
+#sidebar ul li a {
+	color: rgba(233,236,239,.5);
+	padding-top: 0.3rem;
+	padding-bottom: 0.3rem;
+	font-size: 1.1em;
+	line-height: 1.6em;
 }
 
-
-/**
- * Extractor code editor
- */
-.CodeMirror {
-	height: 400px;
-	border: 1px solid #ccc;
+#sidebar ul li a:hover {
+    color: #fff;
 }
 
-
-
-.select-areas-overlay {
-	background-color: #000;
-	overflow: hidden;
-	position: absolute;
-}
-.blurred {
-	filter: url("/filters.svg#blur3px");
-	-webkit-filter: blur(3px);
-	-moz-filter: blur(3px);
-	-o-filter: blur(3px);
-	filter: blur(3px);
+#sidebar ul li a.active {
+	background: rgba(59,125,221,.6);
+	background-color: #6ec7f0;
+    color: #fff;
 }
 
-.select-areas-outline {
-	background: #fff url('outline.gif');
-	overflow: hidden;
+#sidebar ul li ul a {
+	color: #666;
+	padding-left: 30px;
 }
 
-.select-areas-resize-handler {
-	background-color: #000;
-	border: 1px #fff solid;
-	height: 8px;
-	width: 8px;
-	overflow: hidden;
+#sidebar ul li ul li a:before {
+	content: "→";
+	padding-right: 5px;
 }
 
-.select-areas-delete-area {
-	background: url('bt-delete.png');
-	cursor: pointer;
-	height: 16px;
-	width: 16px;
-}
-.delete-area {
-	position: absolute;
-	cursor: pointer;
-	padding: 5px;
-}
-
-
-/**
- * Batch match
- */
-.match {
-	height: 250px;
-	cursor: pointer;
-}
-
-/**
- * Panels
- */
-.panel-link {
-	cursor: pointer;
-}
-
-
-.table>tbody>tr>td.grand-total {
-	vertical-align: middle;
-	text-align: right;
-	font-size: 1.3em;
-	font-weight: bold;
-	padding-top: 5px;
-}
-
-dt, label {
-	font-weight: 600;
-}
-.btn, .form-control {
+#sidebar .nav-pills .nav-link {
 	border-radius: 0;
 }
 
 /**
- * Typeahead
+ * Feather icons
  */
-.form-control.typeahead {
-	width: 100%;
+.feather {
+	width: 16px;
+	height: 16px;
+	stroke: currentColor;
+	stroke-width: 2;
+	stroke-linecap: round;
+	stroke-linejoin: round;
+	fill: none;
+	padding-bottom: 3px;
+}
+
+/**
+ * Select2
+ */
+.select2-container{
+	width: 100%!important;
+}
+.select2-search--dropdown .select2-search__field {
+	width: 98%;
+}
+
+
+/**
+ * Customer contact card
+ */
+.card-body > .badge {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    padding: 12px 15px;
+    padding-right: 10px;
+    border-radius: 0 0 0 26px;
+    font-size: 14px;
+}
+
+.customer_contact.card {
+	cursor: pointer;
 }
