--- a/app/admin/template/_default/modal.base.twig
+++ b/app/admin/template/_default/modal.base.twig
@@ -2,8 +2,9 @@
 	<div class="modal-dialog{% if modal_size is defined %} modal-{{ modal_size }}{% endif %}">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-				<h4>{% block header %}{% endblock header %}</h4>
+				<h5 class="modal-title">{% block header %}{% endblock header %}</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{% trans "Close" %}"></button>
+
 			</div>
 			<div class="modal-body">
 				{% block body %}{% endblock body %}
